syntax = "proto3";

package demo;

service DemoService {
  rpc GetAllUser(GetAllUserRequest) returns (GetAllUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetAllUserRequest{

}

message GetAllUserResponse{
  repeated User users = 1;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
  string email = 3;

}

message DeleteUserRequest{
  int32 id = 1;
}

message DeleteUserResponse{
  bool success = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
}

